<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_ColorCMYK" Id="{f5aa018c-e9d5-4c30-88f3-f5983a42ee5b}">
    <Declaration><![CDATA[TYPE ST_ColorCMYK :
STRUCT
	nCyan						: BYTE;
	nMagenta					: BYTE;
	nYellow						: BYTE;
	nKey						: BYTE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>